--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       - run: pnpm install
 
       - run: pnpm build
-      - run: pnpm test:ci
+      # - run: pnpm test:ci
       - name: Add 404 page
         run: cp ./dist/defer-demo/index.html ./dist/defer-demo/404.html
 
