--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build",
-        "build:ci": "ng build --base-href /defer-demo/",
+        "build:ci": "ng build --deploy-url /defer-demo/",
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
         "test:ci": "ng test --no-watch --browsers=ChromeHeadless",
